--- a/app.json
+++ b/app.json
@@ -2,7 +2,5 @@
   "name": "Data usage test demo app",
   "description": "data usage rest server",
   "repository": "https://github.com/siki1793/datausage-test",
-  "logo": "",
-  "keywords": ["node", "express", "static"],
-  "image": ""
+  "keywords": ["node", "express", "static"]
 }
